--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <resources>
     <string name="app_name">My Application</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="edit_text">点下面这个Button试试</string>
+    <string name="editclick_text">点的我都变了</string>
+    <string name="btn_text">点我</string>
+    <string name="goto_hello">去hello世界</string>
+    <string name="exit">退出</string>
+    <string name="bar_plus">增加进度</string>
+    <string name="left_btn">左边按钮</string>
+    <string name="other_text">其他碎片文本</string>
+    <string name="right_text">右边文本</string>
 </resources>
